[package]
name = "korni"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast, stateless, zero-copy parser for Ecolog Dotenv File Format (EDF) files"
repository = "https://github.com/ph1losof/korni"
license = "MIT"

[dependencies]
# Zero runtime dependencies for maximum speed

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = "0.5"
paste = "1.0.15"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
